--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,14 @@
   </head>
 
   <body>
-
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
+    <footer>
+       <div class="container">
+        <div class="row d-flex">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
