--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,4 +1,4 @@
-<%= render "layouts/header" %>
+<%= render "layouts/public_header" %>
 <div class="container">
   <dev class="row">
     <div class="text">
